--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-"license": "ISC",
-"devDependencies": {
+  "license": "ISC",
+  "devDependencies": {
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
     "nodemon": "^2.0.7"
-}
+  },
+  "dependencies": {
+    "chalk": "^4.1.1",
+    "express": "^4.17.1",
+    "express-validator": "^6.11.1",
+    "glob": "^7.1.7",
+    "http-errors": "^1.8.0",
+    "swagger-ui-express": "^4.1.6"
+  }
 }
